[package]
name = "wosh"
version = "0.1.0"
authors = ["plsuwu <pls@plsuwu.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
